# react-native-stockfish-android

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-stockfish-android.podspec  tsconfig.json
Example/: .gitignore  App.js  package.json
Example/android/: build.gradle
Example/android/app/: _BUCK  build.gradle
Example/android/app/src/main/: AndroidManifest.xml
Example/android/app/src/main/java/com/loloof64/reactnativestockfishandroidexample/: MainActivity.java  MainApplication.java
Example/android/app/src/main/res/values/: strings.xml
android/: CMakeLists.txt  EngineUtil.cpp  build.gradle  cpp-adapter.cpp  gradle.properties
android/cpp/nativeutil/: CMakeLists.txt
android/cpp/stockfish/: CMakeLists.txt  cpp-adapter.cpp  evaluate.h  main.cpp  main.h  mainIO.cpp  mainIO.h  search.cpp  thread.cpp  thread.h  uci.cpp  uci.h  ucioption.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/loloof64/reactnativestockfishandroid/: StockfishAndroidModule.kt  StockfishAndroidPackage.kt
android/src/main/java/com/reactnativestockfishandroid/: StockfishAndroidModule.kt  StockfishAndroidPackage.kt
android/src/main/java/org/petero/droidfish/: DroidFishApp.java  Util.java
android/src/main/java/org/petero/droidfish/engine/: DroidComputerPlayer.java  ExternalEngine.java  InternalStockFish.java  OpenExchangeEngine.java  UCIEngineBase.java
android/src/main/java/org/petero/droidfish/gamelogic/: TextIO.java
android/src/main/res/values/: strings.xml
android/src/main/res/values-be/: strings.xml
android/src/main/res/values-de/: strings.xml
android/src/main/res/values-es/: strings.xml
android/src/main/res/values-fr/: strings.xml
android/src/main/res/values-it/: strings.xml
android/src/main/res/values-ko/: strings.xml
android/src/main/res/values-nl/: strings.xml
android/src/main/res/values-pl/: strings.xml
android/src/main/res/values-pt/: strings.xml
android/src/main/res/values-ru/: strings.xml
android/src/main/res/values-tr/: strings.xml
android/src/main/res/values-uk/: strings.xml
android/src/main/res/values-zh-rCN/: strings.xml
cpp/: Android.mk  Application.mk  CMakeLists.txt
cpp/nativeutil/: CMakeLists.txt
cpp/stockfish/: CMakeLists.txt
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/example/reactnativestockfishandroid/: ReactNativeFlipper.java
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/com/example/reactnativestockfishandroid/: MainActivity.java  MainApplication.java
example/android/app/src/main/java/com/example/reactnativestockfishandroidexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/StockfishAndroidExample/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
example/ios/StockfishAndroidExample.xcodeproj/: project.pbxproj
example/ios/StockfishAndroidExample.xcodeproj/xcshareddata/xcschemes/: StockfishAndroidExample.xcscheme
example/ios/StockfishAndroidExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.js  App.tsx
ios/: StockfishAndroid.h  StockfishAndroid.mm
ios/StockfishAndroid.xcodeproj/: project.pbxproj
src/: Engine.js  EngineBase.js  EngineWrapper.js  index.js  index.tsx  parseIntValue.js
